add acknowledgements and email form

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -18,6 +18,7 @@
     </div>
   </div>
 </section>
+
 {{ end }}
 
 {{ define "sidebar-prefooter" }}
@@ -54,8 +55,112 @@
       </div>
     </div>
   </section>
+
+
+
+  <section class="section section-sm mt-n3 mb-3 bg-light">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-10 col-xl-8">
+          <div class="card">
+            <div class="card-bar"></div>
+            <div class="card-body">
+
+  <!-- Begin Mailchimp Signup Form -->
+  <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css" rel="stylesheet" type="text/css">
+  <!--<style type="text/css">
+  	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;  width:600px;}
+  	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+  	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+  </style>-->
+  <div id="mc_embed_signup">
+  <form action="https://web-scraping.us14.list-manage.com/subscribe/post?u=d4526d2b1c8edaeadcbc8394f&amp;id=4cd9f815f7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate row" target="_blank" novalidate>
+
+    <div id="mc_embed_signup_scroll">
+
+  	<h2>Stay in the loop</h2>
+    <p class="card-text">Subscribe to the newsletter and get occasional updates.</p>
+
+    <div class="col-md-12">
+
+  <div class="mc-field-group">
+  	<input type="email" value="" name="EMAIL" placeholder="your@email.com" class="required email form-control" aria-label="Email address" id="mce-EMAIL">
+  </div>
+  	<div id="mce-responses" class="clear foot">
+  		<div class="response" id="mce-error-response" style="display:none"></div>
+  		<div class="response" id="mce-success-response" style="display:none"></div>
+  	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+  </div>
+
+<div class="col-md-4">
+      <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d4526d2b1c8edaeadcbc8394f_4cd9f815f7" tabindex="-1" value=""></div>
+          <div class="optionalParent">
+              <div class=""><!--clear foot-->
+
+
+                  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary w-100">
+
+                  <p class="brandingLogo"><a href="http://eepurl.com/h0JJhT" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a></p>
+              </div>
+          </div>
+
+        </div>
+      </div>
+  </form>
+  </div>
+  <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+  <!--End mc_embed_signup-->
+</div>
+</div>
+</div>
+
+
+</div>
+</div>
+</section>
+
+
+<section class="section section-sm my-3 py-5 ">
+  <div class="container">
+    <h2 class="h3 my-0 text-center">Supported by</h2>
+    <div class="row justify-content-center g-4 mb-5">
+      <div class="col-14 col-sm-10 col-md-8 col-lg-6 col-xl-4">
+        <div class="card h-100 text-center border-0 py-2">
+          <div class="card-body pb-1 d-flex justify-content-center align-items-center">
+            <a class="stretched-link msi-link" href="https://www.msi.org/">
+              <span class="visually-hidden">MSI logo</span>
+              <img class="logo-light" rel="icon" src="https://www.msi.org/wp-content/uploads/2021/07/MSILogoUpdated-300x100.jpg" viewBox="0 0 147 40" width="110.25" height="30">
+
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-14 col-sm-10 col-md-8 col-lg-6 col-xl-4">
+        <div class="card h-100 text-center border-0 py-2">
+          <div class="card-body pb-1 d-flex justify-content-center align-items-center">
+
+            <a class="stretched-link msi-link" href="https://tilburgsciencehub.com/">
+              <span class="visually-hidden">Tilburg Science Hub logo</span>
+              <img class="logo-light" rel="icon" src="{{ "images/tsh_logo.svg" | absURL }}" viewBox="0 0 147 40" width="110.25" height="30">
+
+            </a>
+
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+</section>
+
+
+
+
   {{ end }}
 {{ end }}
+
 
 {{ define "sidebar-footer" }}
 <section class="section section-sm container-fluid">
