add some initial content

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -27,19 +27,24 @@
     <div class="container">
       <div class="row justify-content-center text-center">
         <div class="col-lg-5">
+          <h2 class="h4">Learn how to scrape⚡️</h2>
+          <p>Follow technical tutorials on using <a href="docs/tutorials/webscraping/">web scraping</a> and <a href="docs/tutorials/apis/">APIs</a> for data retrieval from the web.</p>
+        </div>
+        <div class="col-lg-5">
+          <h2 class="h4">Discover datasets and APIs</h2>
+          <p>Browse our directory of <a href = "docs/databases/datasets/">public web datasets</a> and <a href="docs/databases/apis">APIs</a> for use in academic research projects.</p>
+        </div>
+        <div class="col-lg-5">
+          <h2 class="h4">Seek inspiration from 300+ published papers</h2>
+          <p>Explore the <a href="docs/databases/publications">database of published papers</a> in marketing using web data.</p>
+        </div>
+      </div>
+      <!--
+      <div class="row justify-content-center text-center">
+        <div class="col-lg-5">
           <h2 class="h4">Master the challenges</h2>
           <p>Learn how to balance validity challenges with technical, legal and ethical concerns.</p>
         </div>
-        <div class="col-lg-5">
-          <h2 class="h4">Learn how to scrape⚡️</h2>
-          <p>Follow technical tutorials on using <a href="">web scraping</a> and <a href="">APIs</a> for data retrieval from the web.</p>
-        </div>
-        <div class="col-lg-5">
-          <h2 class="h4">300+ published papers</h2>
-          <p>Explore the database of published papers in marketing using web data.</p>
-        </div>
-      </div>
-      <div class="row justify-content-center text-center">
         <div class="col-lg-5">
           <h2 class="h4">Discover working papers</h2>
           <p>Get tuned in to recent work using web data, or submit your own working papers.</p>
@@ -48,11 +53,9 @@
           <h2 class="h4">Stay up-to-date</h2>
           <p>Follow our blog on recent developments involving the collection and use of web data.</p>
         </div>
-        <div class="col-lg-5">
-          <h2 class="h4">Datasets and APIs</h2>
-          <p>Browse our directory of public web datasets and APIs for use in academic research projects.</p>
-        </div>
+
       </div>
+      -->
     </div>
   </section>
 
@@ -129,7 +132,7 @@
           <div class="card-body pb-1 d-flex justify-content-center align-items-center">
             <a class="stretched-link msi-link" href="https://www.msi.org/">
               <span class="visually-hidden">MSI logo</span>
-              <img class="logo-light" rel="icon" src="https://www.msi.org/wp-content/uploads/2021/07/MSILogoUpdated-300x100.jpg" viewBox="0 0 147 40" width="110.25" height="30">
+              <img class="logo" rel="icon" src="{{ "images/msi_logo.jpg" | absURL }}" viewBox="0 0 147 40" width="110.25" height="30">
 
             </a>
           </div>
@@ -142,7 +145,7 @@
 
             <a class="stretched-link msi-link" href="https://tilburgsciencehub.com/">
               <span class="visually-hidden">Tilburg Science Hub logo</span>
-              <img class="logo-light" rel="icon" src="{{ "images/tsh_logo.svg" | absURL }}" viewBox="0 0 147 40" width="110.25" height="30">
+              <img class="logo" rel="icon" src="{{ "images/tsh_logo.svg" | absURL }}" viewBox="0 0 147 40" width="110.25" height="30">
 
             </a>
 
