dark mode for logos

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -132,8 +132,8 @@
           <div class="card-body pb-1 d-flex justify-content-center align-items-center">
             <a class="stretched-link msi-link" href="https://www.msi.org/">
               <span class="visually-hidden">MSI logo</span>
-              <img class="logo" rel="icon" src="{{ "images/msi_logo.jpg" | absURL }}" viewBox="0 0 147 40" width="110.25" height="30">
-
+              <img class="logo-light" rel="icon" src="{{ "images/msi_logo.svg" | absURL }}" viewBox="0 0 147 40" width="110.25" height="30">
+              <img class="logo-dark d-none" rel="icon" src="{{ "images/msi_logo_dark.svg" | absURL }}" viewBox="0 0 147 40" width="110.25" height="30">
             </a>
           </div>
         </div>
@@ -145,8 +145,8 @@
 
             <a class="stretched-link msi-link" href="https://tilburgsciencehub.com/">
               <span class="visually-hidden">Tilburg Science Hub logo</span>
-              <img class="logo" rel="icon" src="{{ "images/tsh_logo.svg" | absURL }}" viewBox="0 0 147 40" width="110.25" height="30">
-
+              <img class="logo-light" rel="icon" src="{{ "images/tsh_logo.svg" | absURL }}" viewBox="0 0 147 40" width="110.25" height="30">
+              <img class="logo-dark d-none" rel="icon" src="{{ "images/tsh_logo_dark.svg" | absURL }}" viewBox="0 0 147 40" width="110.25" height="30">
             </a>
 
           </div>
