add datasets filtering

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -22,6 +22,7 @@
 @import "components/code";
 @import "components/details";
 @import "components/syntax";
+@import "components/datasetHolder";
 @import "components/comments";
 @import "components/forms";
 @import "components/images";
