--- a/assets/scss/common/_global.scss
+++ b/assets/scss/common/_global.scss
@@ -42,6 +42,10 @@ body.docs {
   padding-top: 0 !important;
 }
 
+.mr-2 {
+  margin-right: 6px;
+}
+
 @include media-breakpoint-up(md) {
   body {
     font-size: $font-size-md;
