--- a/assets/scss/components/_datasetHolder.scss
+++ b/assets/scss/components/_datasetHolder.scss
@@ -64,14 +64,16 @@
 }
 
 @media (max-width: 768px) {
-  .datasetResults {
+  .datasetResults,
+  .datasetResultsShimmers {
     grid-template-columns: 1fr;
   }
 }
 
 // two screen sizes media query
 @media (min-width: 768px) and (max-width: 1200px) {
-  .datasetResults {
+  .datasetResults,
+  .datasetResultsShimmers {
     grid-template-columns: 1fr 1fr;
   }
 }
