fix dark mode and add link

--- a/layouts/shortcodes/filter.html
+++ b/layouts/shortcodes/filter.html
@@ -7,7 +7,7 @@
     &nbsp;&nbsp;
     <div class="d-flex flex-wrap">
       {{ range $value }}
-      <button class="btn card btn-sm mr-2 filterBtn mb-2" data-type="{{ $key }}" data-value="{{ . }}">{{ . }}</button>
+      <button class="btn btn-sm mr-2 filterBtn mb-2" data-type="{{ $key }}" data-value="{{ . }}">{{ . }}</button>
       {{ end }}
     </div>
   </div>
