--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,8 @@
 <section class="section container-fluid mt-n3 pb-3">
   <div class="row justify-content-center">
     <div class="col-lg-12 text-center">
-      <h1 class="mt-0">{{ .Title }}</h1>
+      <h1 class="mt-0">Scraping Web Data <br>for Marketing Insights</h1>
+<!-- scraping {{ .Title }}-->
     </div>
     <div class="col-lg-9 col-xl-8 text-center">
       <p class="lead">{{ .Params.lead | safeHTML }}</p>
