--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,7 +12,7 @@
 -->
       <a class="btn btn-primary btn-lg px-4 mb-2" href="/docs/{{ if .Site.Params.options.docsVersioning }}{{ .Site.Params.docsVersion }}/{{ end }}prologue/introduction/" role="button">Read the Paper</a>
 
-      <p class="meta">Forthcoming at <i>Journal of Marketing</i>
+      <p class="meta">Forthcoming at the <i>Journal of Marketing</i>
         <!--<a href="https://github.com/h-enk/doks">GitHub v{{ $data := getJSON "/package.json" }}{{ $data.version }}</a>-->
       </p>
 
@@ -37,7 +37,7 @@
         </div>
         <div class="col-lg-5">
           <h2 class="h4">Seek inspiration from 300+ published papers</h2>
-          <p>Explore the <a href="docs/databases/publications">database of published papers</a> in marketing using web data.</p>
+          <p>Explore the <a href="docs/databases/publications">database of published papers in marketing</a> using web data (2001-2020).</p>
         </div>
       </div>
       <!--
