add nwo as supporter; redesign contact

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -179,14 +179,27 @@
 
             <a class="stretched-link msi-link" href="https://tilburgsciencehub.com/">
               <span class="visually-hidden">Tilburg Science Hub logo</span>
-              <img class="logo-light" rel="icon" src="{{ "images/tsh_logo.svg" | absURL }}" viewBox="0 0 147 40" width="110.25" height="30">
-              <img class="logo-dark d-none" rel="icon" src="{{ "images/tsh_logo_dark.svg" | absURL }}" viewBox="0 0 147 40" width="110.25" height="30">
+              <img class="logo-light" rel="icon" src="{{ "images/tsh_logo.svg" | absURL }}" viewBox="0 0 147 40" height="40">
+              <img class="logo-dark d-none" rel="icon" src="{{ "images/tsh_logo_dark.svg" | absURL }}" viewBox="0 0 147 40" height="40">
             </a>
 
           </div>
         </div>
       </div>
 
+      <div class="col-14 col-sm-10 col-md-8 col-lg-6 col-xl-4">
+        <div class="card h-100 text-center border-0 py-2">
+          <div class="card-body pb-1 d-flex justify-content-center align-items-center">
+
+            <a class="stretched-link msi-link" href="https://www.nwo.nl/en">
+              <span class="visually-hidden">Logo of Dutch Research Council (NWO)</span>
+              <img class="logo-light" rel="icon" src="{{ "images/nwo.png" | absURL }}" viewBox="0 0 147 40" height="40">
+              <img class="logo-dark d-none" rel="icon" src="{{ "images/nwo_dark.png" | absURL }}" viewBox="0 0 147 40" height="40">
+            </a>
+
+          </div>
+        </div>
+      </div>
 
     </div>
   </div>
