Add link to Jm accepted articles

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@
       <!--
         <a class="btn btn-primary btn-lg px-4 mb-2" href="/docs/{{ if .Site.Params.options.docsVersioning }}{{ .Site.Params.docsVersion }}/{{ end }}prologue/introduction/" role="button">Get Started</a>
 -->
-      <a class="btn btn-primary btn-lg px-4 mb-2" href="/docs/{{ if .Site.Params.options.docsVersioning }}{{ .Site.Params.docsVersion }}/{{ end }}prologue/introduction/" role="button">Read the Paper</a>
+      <a class="btn btn-primary btn-lg px-4 mb-2" href="https://journals.sagepub.com/home/jmx#" role="button">Read the Paper</a>
 
       <p class="meta">Forthcoming at the <i>Journal of Marketing</i>
         <!--<a href="https://github.com/h-enk/doks">GitHub v{{ $data := getJSON "/package.json" }}{{ $data.version }}</a>-->
