--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,6 +14,9 @@
 
       <a class="btn btn-primary btn-lg px-4 mb-2" href="docs/databases/publications/" role="button">Explore the database</a>
 
+      <a class="btn btn-primary btn-lg px-4 mb-2" href="data/webdata_public.pdf" role="button">View the slides</a>
+
+
       <p class="meta">Forthcoming at the <i>Journal of Marketing</i>
         <!--<a href="https://github.com/h-enk/doks">GitHub v{{ $data := getJSON "/package.json" }}{{ $data.version }}</a>-->
       </p>
@@ -22,7 +25,10 @@
   </div>
 </section>
 
-
+<!--
+<div class='altmetric-embed' data-badge-type='donut' data-doi="10.1038/nature.2012.9872"></div>
+<div data-badge-type="2" data-doi="10.1038/nature.2014.14583" data-hide-no-mentions="true" class="altmetric-embed"></div>
+-->
 {{ end }}
 
 {{ define "sidebar-prefooter" }}
