update webinar content/Youtube; add packages

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,8 +14,9 @@
 
       <a class="btn btn-primary btn-lg px-4 mb-2" href="docs/databases/publications/" role="button">Explore the database</a>
 
-      <a class="btn btn-primary btn-lg px-4 mb-2" href="data/webdata_public.pdf" role="button">View the slides</a>
+      <!--<a class="btn btn-primary btn-lg px-4 mb-2" href="data/webdata_public.pdf" role="button">View webinar slides</a>-->
 
+      <a class="btn btn-primary btn-lg px-4 mb-2" href="https://youtu.be/KiyFyLEkqNk" role="button">Watch webinar</a>
 
       <p class="meta">Forthcoming at the <i>Journal of Marketing</i>
         <!--<a href="https://github.com/h-enk/doks">GitHub v{{ $data := getJSON "/package.json" }}{{ $data.version }}</a>-->
