--- a/layouts/index.html
+++ b/layouts/index.html
@@ -18,7 +18,7 @@
 
       <a class="btn btn-primary btn-lg px-4 mb-2" href="https://youtu.be/KiyFyLEkqNk" role="button">Watch webinar</a>
 
-      <p class="meta">Forthcoming at the <i>Journal of Marketing</i>
+      <p class="meta"><i>Journal of Marketing</i> (Vol. 86, Issue 5, 2022)
         <!--<a href="https://github.com/h-enk/doks">GitHub v{{ $data := getJSON "/package.json" }}{{ $data.version }}</a>-->
       </p>
 
