--- a/layouts/partials/head/script-header.html
+++ b/layouts/partials/head/script-header.html
@@ -7,13 +7,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-FP3W8573SN"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XKXVKSY7YY"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-FP3W8573SN');
+  gtag('config', 'G-XKXVKSY7YY');
 </script>
 
 
